# quento

./: .gitignore  CLAUDE.md  README.md  STATUS.md  docker-compose.yml  nx.json  package-lock.json  package.json  render.yaml  tsconfig.base.json
.github/workflows/: ci.yml  mobile-build.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/v1/: analysis.py  auth.py  chat.py  router.py  strategy.py
apps/api/app/chains/: __init__.py  analysis.py  conversation.py  strategy.py
apps/api/app/core/: __init__.py  exceptions.py  security.py
apps/api/app/db/: __init__.py  database.py
apps/api/app/models/: __init__.py  analysis.py  conversation.py  strategy.py  user.py
apps/api/app/schemas/: __init__.py  analysis.py  auth.py  chat.py  common.py  strategy.py
apps/api/app/services/: ai_service.py  analysis_service.py  auth_service.py  chat_service.py  strategy_service.py
apps/api/tests/: __init__.py  conftest.py  test_analysis.py  test_auth.py  test_chat.py  test_health.py
apps/mobile/: .eslintrc.json  .gitignore  App.tsx  app.config.js  app.json  eas.json  jest.config.js  metro.config.js  package-lock.json  package.json  project.json  store.config.json  tsconfig.json
apps/mobile/.storybook/: Storybook.tsx  index.tsx  main.ts  preview.tsx
apps/mobile/__tests__/: setup.ts
apps/mobile/__tests__/components/: Button.test.tsx  Card.test.tsx  ChatBubble.test.tsx  Input.test.tsx  Text.test.tsx
apps/mobile/__tests__/constants/: theme.test.ts
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/(auth)/: _layout.tsx  forgot-password.tsx  login.tsx  register.tsx
apps/mobile/app/(tabs)/: _layout.tsx  discover.tsx  execute.tsx  home.tsx  optimize.tsx  plan.tsx
apps/mobile/components/chat/: ChatBubble.tsx  MessageSearch.tsx  QuickReplies.tsx  TypingIndicator.tsx
apps/mobile/components/rings/: RingVisualization.tsx
apps/mobile/components/ui/: AnimatedView.tsx  Button.stories.tsx  Button.tsx  Card.tsx  ExportMenu.tsx  Input.tsx  Skeleton.tsx  Text.tsx  index.ts
apps/mobile/constants/: theme.ts
apps/mobile/ios/: Podfile
apps/mobile/ios/Quento/: Info.plist  SplashScreen.storyboard
apps/mobile/ios/Quento.xcodeproj/: project.pbxproj
apps/mobile/ios/Quento.xcodeproj/xcshareddata/xcschemes/: Quento.xcscheme
apps/mobile/ios/Quento.xcworkspace/: contents.xcworkspacedata
apps/mobile/ios/Quento/Images.xcassets/SplashScreenBackground.colorset/: Contents.json
apps/mobile/scripts/: prepare-appstore.sh
apps/mobile/services/: api.ts  exportService.ts  sentry.ts
apps/mobile/stores/: analysisStore.ts  authStore.ts  chatStore.ts  strategyStore.ts
design/: README.md  components.json  pages.json  tokens.json
docs/: AI_INTEGRATION.md  API_SPEC.md  ARCHITECTURE.md  PRD.md  PROJECT_STATUS.md  ROADMAP.md  UI_SPEC.md
docs/design-system/: DESIGN_TOKENS.md  design-tokens.json
libs/shared/src/: constants.ts  index.ts  types.ts  utils.ts
