[tool.poetry]
name = "quento-api"
version = "0.1.0"
description = "Quento API - AI-Powered Business Growth Platform"
authors = ["Chris Therriault <chris@servicevision.net>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
PyJWT = {extras = ["crypto"], version = "^2.8.0"}
passlib = {extras = ["bcrypt", "argon2"], version = "^1.7.4"}
argon2-cffi = "^23.1.0"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
langchain = "^0.1.0"
langchain-core = "^0.1.0"
langchain-community = "^0.0.10"
litellm = "^1.16.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
aiosqlite = "^0.20.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
# Disable strict checks that cause issues with SQLAlchemy
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false

[[tool.mypy.overrides]]
module = ["app.models.*", "app.db.*", "app.services.*"]
ignore_errors = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "I001",   # Import sorting - handled by isort
    "F401",   # Unused imports - many are intentional re-exports in __init__.py
    "F841",   # Local variable assigned but never used - some intentional
    "N802",   # Function name casing (e.g., AI_MODEL validator)
    "N811",   # Constant naming (e.g., PostgresUUID alias)
    "N818",   # Exception naming suffix
    "E501",   # Line too long - allow flexibility
    "UP011",  # Unnecessary parentheses to functools.lru_cache
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Re-exports in __init__ files
"tests/conftest.py" = ["E402"]  # Imports after env vars setup
